--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
   </div>
+  <include src="./partials/portfolio.html"></include>
   <script src="index.js" type="module"></script>
 </body>
 </html>
