--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,6 @@
     </div>
     <main><include src="./partials/portfolio.html"></include></main>
     <include src="./partials/footer.html"></include>
+    <script src="./index.js"></script>
   </body>
 </html>
